Fixed minor grid field info alignment error in css

--- a/app/themes/_default/styles/main.css
+++ b/app/themes/_default/styles/main.css
@@ -26,8 +26,9 @@
 }
 
 .edit-later-info {
-  margin-right: 20px;
   margin-bottom: 0;
+  margin-right: 10px;
+  padding: 5px 0 5px 200px;  
 }
 /*End of general classes*/
 
